# resources/swagger.yaml
@@ -92,36 +92,7 @@ paths:
                   message:
                     type: string
   /alimentos/{id}:
-    put:
-      summary: Atualizar alimento
-      parameters:
-        - in: path
-          name: id
-          required: true
-          schema:
-            type: string
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Alimento'
-      responses:
-        '200':
-          description: Alimento atualizado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Alimento'
-        '404':
-          description: Alimento não encontrado
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
+    # PUT /alimentos/{id} removido
     delete:
       summary: Remover alimento
       parameters:
@@ -141,62 +112,7 @@ paths:
                 type: object
                 properties:
                   message:
-                    type: string
-  /consumo:
-    get:
-      summary: Listar histórico de consumo
-      responses:
-        '200':
-          description: Lista de consumo
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Consumo'
-    post:
-      summary: Registrar consumo de alimento
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/Consumo'
-      responses:
-        '201':
-          description: Consumo registrado
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Consumo'
-        '400':
-          description: Quantidade insuficiente
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-        '404':
-          description: Alimento não encontrado
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  message:
-                    type: string
-  /progresso:
-    get:
-      summary: Consultar progresso do consumo
-      responses:
-        '200':
-          description: Progresso do consumo
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Progresso'
+                    # Endpoints /consumo and /progresso removed in this revision
 components:
   schemas:
     Alimento:
@@ -210,20 +126,4 @@ components:
           type: number
         unidade:
           type: string
-    Consumo:
-      type: object
-      properties:
-        alimentoId:
-          type: string
-        quantidade:
-          type: number
-        data:
-          type: string
-          format: date
-    Progresso:
-      type: object
-      properties:
-        total:
-          type: number
-        consumido:
-          type: number
+    # Consumo and Progresso schemas removed
