# routes/alimentoRoutes.js
@@ -5,7 +5,6 @@ const controller = require('../controllers/alimentoController');
 
 router.get('/', controller.listar);
 router.post('/', controller.adicionar);
-router.put('/:id', controller.atualizar);
 router.delete('/:id', controller.remover);
 
 module.exports = router;
